--- a/src/assets/scss/common/common.scss
+++ b/src/assets/scss/common/common.scss
@@ -4,19 +4,12 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
-  background-color: #fff;
+  background-color: $light-color;
 }
 
 .container {
   max-width: 1160px;
   margin: 0 auto;
-}
-
-.header {
-  color: $text-color-light;
-  a {
-    color: $text-color-light
-  }
 }
 
 .main-color {
@@ -27,8 +20,4 @@ body {
 .light-color {
   background-color: $light-color;
   color: $text-color-dark;
-}
-
-.benefits {
-  background-color: $section-bg-dark;
 }
