--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -1,5 +1,6 @@
 $text-color-light: #fff;
 $text-color-dark: #1F2533;
+$text-color-blur: #878787;
 $main-color: #7400E8;
 $light-color: #fff;
 $section-bg-dark: #F8F8F8;
