added projects section with slider

--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -5,3 +5,5 @@ $main-color: #7400E8;
 $danger-color: #FD3C65;
 $light-color: #fff;
 $section-bg-dark: #F8F8F8;
+$slider-no-active: #C4C4C4;
+$slider-active: #222222;
