--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -7,3 +7,5 @@ $light-color: #fff;
 $section-bg-dark: #F8F8F8;
 $slider-no-active: #C4C4C4;
 $slider-active: #222222;
+$opacity: rgba(255, 255, 255, .5);
+$no-opacity: rgba(255, 255, 255);
